// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BinningScreen Tests rendering the BinningScreen component Test renders the BinningScreen with Selected Pallets 1`] = `
<KeyboardAvoidingView
  behavior="height"
  keyboardVerticalOffset={110}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <ManualScanComponent
      keyboardType="numeric"
      placeholder="[missing \\"en.PALLET.ENTER_PALLET_ID\\" translation]"
    />
    <View>
      <Text
        style={
          Object {
            "fontSize": 16,
            "margin": 15,
            "textAlign": "center",
          }
        }
      >
        [missing "en.BINNING.SCAN_PALLET_BIN" translation]
      </Text>
      <ItemSeparator />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Memo(Pressable)
          onPress={[Function]}
        >
          <mockConstructor
            color="#000000"
            name="barcode-scan"
            size={100}
          />
        </Memo(Pressable)>
        <View
          style={
            Object {
              "paddingTop": 30,
            }
          }
        >
          <Text>
            [missing "en.BINNING.SCAN_PALLET" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
</KeyboardAvoidingView>
`;

exports[`BinningScreen Tests rendering the BinningScreen component Test renders the BinningScreen with Successful getPalletApi state 1`] = `
<KeyboardAvoidingView
  behavior="height"
  keyboardVerticalOffset={110}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <ManualScanComponent
      keyboardType="numeric"
      placeholder="[missing \\"en.PALLET.ENTER_PALLET_ID\\" translation]"
    />
    <View>
      <Text
        style={
          Object {
            "fontSize": 16,
            "margin": 15,
            "textAlign": "center",
          }
        }
      >
        [missing "en.BINNING.SCAN_PALLET_BIN" translation]
      </Text>
      <ItemSeparator />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Memo(Pressable)
          onPress={[Function]}
        >
          <mockConstructor
            color="#000000"
            name="barcode-scan"
            size={100}
          />
        </Memo(Pressable)>
        <View
          style={
            Object {
              "paddingTop": 30,
            }
          }
        >
          <Text>
            [missing "en.BINNING.SCAN_PALLET" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
</KeyboardAvoidingView>
`;

exports[`BinningScreen Tests rendering the BinningScreen component Test renders the default BinningScreen  1`] = `
<KeyboardAvoidingView
  behavior="height"
  keyboardVerticalOffset={110}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <ManualScanComponent
      keyboardType="numeric"
      placeholder="[missing \\"en.PALLET.ENTER_PALLET_ID\\" translation]"
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Memo(Pressable)
          onPress={[Function]}
        >
          <mockConstructor
            color="#000000"
            name="barcode-scan"
            size={100}
          />
        </Memo(Pressable)>
        <View
          style={
            Object {
              "paddingTop": 30,
            }
          }
        >
          <Text>
            [missing "en.BINNING.SCAN_PALLET" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
</KeyboardAvoidingView>
`;
